# riscv-playground

./: .gitignore  CMakeLists.txt  README.md  project.vim  riscv64-linux-gnu.toolchain.cmake
.github/workflows/: ci.yaml
src/: brainfuck.s  brainfuck_helpers.c  brainfuck_to_riscv64_compiler.py  factorial.s  game_of_life.s  game_of_life_utils.c
